<?xml version="1.0"?>
<package>
	<name>KVH_CG5100_IMU</name>
  <maintainer email="melex@todo.todo">melex</maintainer>
	<version>0.0.0</version>
  	<description>
     KVH CG-5100 IMU
     RS232/422 115200 BPS 8N1 , data rate 100Hz
  </description>

  <author>AMRL</author>
  <license>BSD</license>
  <url>http://ros.org/wiki/KVH_CG5100_IMU</url>

  <buildtool_depend>catkin</buildtool_depend>
	<build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>

</package>


